# project-euler

./: CHANGELOG.md  P1.hs  P2.hs  P3.hs  P4.hs  P5.hs  README.md  package.yaml  project-euler.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
lib/solutions/: P1.hs  P2.hs  P3.hs  P5.hs  Solutions.hs
src/: Problems.hs
src/Problems/: P1.hs
src/solutions/: P4.hs
